--- a/src/auth/Login.html
+++ b/src/auth/Login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
-    <script src="../../translation/i18n.js"></script>
+    <script src="/translation/i18n.js"></script>
     <script>
         
     </script>
@@ -20,7 +20,7 @@
             <div class="flex items-center justify-between h-full">
                 <!-- Logo -->
                 <a href="#" class="flex items-center">
-                    <img src="../../assets/png/logoEmsiHealth4.png" alt="EMSI Health" class="h-auto" width="150px" />
+                    <img src="/assets/png/logoEmsiHealth4.png" alt="EMSI Health" class="h-auto" width="150px" />
                 </a>
 
                 <!-- Sélecteur de langue -->
@@ -45,7 +45,7 @@
     <main class="pt-16 min-h-screen flex flex-col md:flex-row items-center justify-center md:justify-evenly gap-8 p-6 md:p-10">
         <!-- Image animée -->
         <div class="order-1 md:order-2 flex items-center justify-center">
-            <img src="../../assets/svg/doctor.svg" alt="doctors" class="w-64 md:w-96 lg:w-[500px] max-w-full h-auto">
+            <img src="/assets/svg/doctor.svg" alt="doctors" class="w-64 md:w-96 lg:w-[500px] max-w-full h-auto">
         </div>
 
         <!-- Formulaire -->
