--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta http-equiv="refresh" content="0; URL='src/Login.html'" />
 </head>
 <body>
-    <h1>SALAAAAAAAAAM</h1>
+  Redirection...
 </body>
 </html>
