--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta http-equiv="refresh" content="0; URL='src/Login.html'" />
+  <meta http-equiv="refresh" content="0; URL='src/auth/Login.html'" />
 </head>
 <body>
   Redirection...
