--- a/src/auth/Login.html
+++ b/src/auth/Login.html
@@ -108,8 +108,8 @@
         </div>
     </main>
 
-    <script src="./translation.js"></script>
-    <script type="module" src="../main.js"></script>
+    <script src="/src/auth/translation.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
