--- a/src/Dashboards/Admin/index.html
+++ b/src/Dashboards/Admin/index.html
@@ -71,7 +71,7 @@
 
                     <!-- Logo -->
                     <a href="#" class="flex items-center ml-2">
-                        <img id="logoImage" src="../../../../assets/png/logoEmsiHealth4.png" alt="EMSI Health" width="150px" />
+                        <img id="logoImage" src="../../../assets/png/logoEmsiHealth4.png" alt="EMSI Health" width="150px" />
                     </a>
 
                     <!-- Sélecteur de langue -->
